feat:add custom charset to database config and migration blueprint

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ MYSQL_PORT=3306
 MYSQL_DATABASE=zero
 MYSQL_USER=root
 MYSQL_PASSWORD=
+MYSQL_CHARSET=utf8mb4
+MYSQL_COLLATION=utf8mb4_general_ci
+POSTGRES_CHARSET=UTF8
+    
 
 MAIL_MAILER=smtp
 MAIL_HOST=127.0.0.1
