feat: implement auth ttl and session driver too cookie

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_KEY=
 APP_URL=http://localhost:8000
 APP_DEBUG=false
 
+# Database
 DB_CONNECTION=mysql
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
@@ -11,8 +12,8 @@ MYSQL_PASSWORD=
 MYSQL_CHARSET=utf8mb4
 MYSQL_COLLATION=utf8mb4_general_ci
 POSTGRES_CHARSET=UTF8
-    
 
+# Mail
 MAIL_MAILER=smtp
 MAIL_HOST=127.0.0.1
 MAIL_PORT=587
@@ -26,17 +27,27 @@ MAIL_HELO_DOMAIN=localhost
 MAIL_ALLOW_SELF_SIGNED=false
 MAIL_VERIFY_PEER=true
 
+# Auth
+AUTH_TOKEN_TTL=604800
+
+# Session
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_COOKIE=zero_session
 SESSION_SECURE_COOKIE=false
 SESSION_SAME_SITE=lax
 
+# Storage
+STORAGE_DISK=local
+STORAGE_LOCAL_ROOT=
+STORAGE_PUBLIC_ROOT=
+
+# Logging
 LOG_DRIVER=file
 LOG_TABLE=logs
 
+# Updater
 UPDATE_MANIFEST_URL=
 UPDATE_TIMEOUT=15
-
 UPDATE_GITHUB_REPO=ZeroPHPFramework/Zero
 UPDATE_GITHUB_BRANCH=main
