feat: add rate limiting configuration options to env file

--- a/.env.example
+++ b/.env.example
@@ -46,8 +46,8 @@ STORAGE_PUBLIC_ROOT=
 LOG_DRIVER=file
 LOG_TABLE=logs
 
-# Updater
-UPDATE_MANIFEST_URL=
-UPDATE_TIMEOUT=15
-UPDATE_GITHUB_REPO=ZeroPHPFramework/Zero
-UPDATE_GITHUB_BRANCH=main
+# Rate Limiting (Global)
+RATE_LIMIT_ENABLED=false
+RATE_LIMIT_MAX_ATTEMPTS=60
+RATE_LIMIT_DECAY_SECONDS=60
+RATE_LIMIT_KEY_STRATEGY=ip
