--- a/.env.example
+++ b/.env.example
@@ -38,9 +38,17 @@ SESSION_SECURE_COOKIE=false
 SESSION_SAME_SITE=lax
 
 # Storage
-STORAGE_DISK=local
-STORAGE_LOCAL_ROOT=
+STORAGE_DISK=public
 STORAGE_PUBLIC_ROOT=
+STORAGE_PRIVATE_ROOT=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_REGION=us-east-1
+S3_BUCKET=
+S3_ENDPOINT=
+S3_PATH_STYLE=true
+S3_DEFAULT_ACL=private
+S3_ROOT_PATH=
 
 # Logging
 LOG_DRIVER=file
